// Vitest Snapshot v1

exports[`Steps > Steps clickVue demo works fine 1`] = `
<div
  class="cell-base"
  data-v-196bdfb8=""
>
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor demo-steps"
    data-v-196bdfb8=""
  >
    
    
    <div
      class="t-step t-step--default t-step--process"
      data-v-196bdfb8=""
    >
      <div
        class="t-step__inner"
      >
        <div
          class="t-step-icon"
        >
          <div
            class="t-step-icon__number"
          >
            1
          </div>
        </div>
        <div
          class="t-step-content"
        >
          <div
            class="t-step-title"
          >
            步骤描述
          </div>
          <div
            class="t-step-description"
          >
            辅助信息文字最多两行
          </div>
          <div
            class="t-step-extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-step t-step--default"
      data-v-196bdfb8=""
    >
      <div
        class="t-step__inner"
      >
        <div
          class="t-step-icon"
        >
          <div
            class="t-step-icon__number"
          >
            2
          </div>
        </div>
        <div
          class="t-step-content"
        >
          <div
            class="t-step-title"
          >
            选中步骤
          </div>
          <div
            class="t-step-description"
          >
            辅助信息文字最多两行
          </div>
          <div
            class="t-step-extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-step t-step--default"
      data-v-196bdfb8=""
    >
      <div
        class="t-step__inner"
      >
        <div
          class="t-step-icon"
        >
          <div
            class="t-step-icon__number"
          >
            3
          </div>
        </div>
        <div
          class="t-step-content"
        >
          <div
            class="t-step-title"
          >
            未完成
          </div>
          <div
            class="t-step-description"
          >
            辅助信息文字最多两行
          </div>
          <div
            class="t-step-extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    
    
  </div>
</div>
`;

exports[`Steps > Steps contentVue demo works fine 1`] = `
<div
  class="cell-base"
  data-v-45ade829=""
>
  <div
    class="t-steps t-steps--vertical t-steps--default-anchor demo-steps"
    data-v-45ade829=""
  >
    
    <div
      class="t-step t-step--default t-step--process"
      data-v-45ade829=""
    >
      <div
        class="t-step__inner"
      >
        <div
          class="t-step-icon"
        >
          <div
            class="t-step-icon__number"
          >
            1
          </div>
        </div>
        <div
          class="t-step-content"
        >
          <div
            class="t-step-title"
          >
            已完成步骤
          </div>
          <div
            class="t-step-description"
          >
            可自定义此处内容，可自定义此处内容，可自定义此处内容可自定义此处内容可自定义此处内容。
          </div>
          <div
            class="t-step-extra"
          >
            
            <div
              class="extra-img"
              data-v-45ade829=""
            >
              <img
                alt=""
                data-v-45ade829=""
                src="https://0729-75822.gzc.vod.tencent-cloud.com/site_doc/tdesign-logo.png"
              />
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-step t-step--default"
      data-v-45ade829=""
    >
      <div
        class="t-step__inner"
      >
        <div
          class="t-step-icon"
        >
          <div
            class="t-step-icon__number"
          >
            2
          </div>
        </div>
        <div
          class="t-step-content"
        >
          <div
            class="t-step-title"
          >
            当前步骤
          </div>
          <div
            class="t-step-description"
          >
            可自定义此处内容，可自定义此处内容，可自定义此处内容可自定义此处内容可自定义此处内容。
          </div>
          <div
            class="t-step-extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-step t-step--default"
      data-v-45ade829=""
    >
      <div
        class="t-step__inner"
      >
        <div
          class="t-step-icon"
        >
          <div
            class="t-step-icon__number"
          >
            3
          </div>
        </div>
        <div
          class="t-step-content"
        >
          <div
            class="t-step-title"
          >
            未完成步骤
          </div>
          <div
            class="t-step-description"
          >
            可自定义此处内容，可自定义此处内容，可自定义此处内容可自定义此处内容可自定义此处内容。
          </div>
          <div
            class="t-step-extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Steps > Steps horizontalVue demo works fine 1`] = `
<div
  class="demo-steps-base"
  data-v-4c8fa024=""
>
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor demo-steps"
    data-v-4c8fa024=""
  >
    
    <div
      class="t-step t-step--default t-step--process"
      data-v-4c8fa024=""
    >
      <div
        class="t-step__inner"
      >
        <div
          class="t-step-icon"
        >
          <div
            class="t-step-icon__number"
          >
            1
          </div>
        </div>
        <div
          class="t-step-content"
        >
          <div
            class="t-step-title"
          >
            步骤描述
          </div>
          <div
            class="t-step-description"
          >
            
          </div>
          <div
            class="t-step-extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-step t-step--default"
      data-v-4c8fa024=""
    >
      <div
        class="t-step__inner"
      >
        <div
          class="t-step-icon"
        >
          <div
            class="t-step-icon__number"
          >
            2
          </div>
        </div>
        <div
          class="t-step-content"
        >
          <div
            class="t-step-title"
          >
            选中步骤
          </div>
          <div
            class="t-step-description"
          >
            
          </div>
          <div
            class="t-step-extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Steps > Steps iconVue demo works fine 1`] = `
<div
  class="cell-base"
>
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor"
  >
    
    <div
      class="t-step t-step--default t-step--finish"
    >
      <div
        class="t-step__inner t-step__inner__icon"
      >
        <div
          class="t-step-icon"
        >
          <div
            class="t-step-icon__number"
          >
            
            <t-icon
              name="user-filled"
            />
            
          </div>
        </div>
        <div
          class="t-step-content"
        >
          <div
            class="t-step-title"
          >
            步骤描述1
          </div>
          <div
            class="t-step-description"
          >
            辅助信息文字最多两行
          </div>
          <div
            class="t-step-extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-step t-step--default t-step--process"
    >
      <div
        class="t-step__inner t-step__inner__icon"
      >
        <div
          class="t-step-icon"
        >
          <div
            class="t-step-icon__number"
          >
            
            <t-icon
              name="user-filled"
            />
            
          </div>
        </div>
        <div
          class="t-step-content"
        >
          <div
            class="t-step-title"
          >
            未完成
          </div>
          <div
            class="t-step-description"
          >
            辅助信息文字最多两行
          </div>
          <div
            class="t-step-extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-step t-step--default"
    >
      <div
        class="t-step__inner t-step__inner__icon"
      >
        <div
          class="t-step-icon"
        >
          <div
            class="t-step-icon__number"
          >
            
            <t-icon
              name="user-filled"
            />
            
          </div>
        </div>
        <div
          class="t-step-content"
        >
          <div
            class="t-step-title"
          >
            未完成
          </div>
          <div
            class="t-step-description"
          >
            辅助信息文字最多两行
          </div>
          <div
            class="t-step-extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-step t-step--default"
    >
      <div
        class="t-step__inner t-step__inner__icon"
      >
        <div
          class="t-step-icon"
        >
          <div
            class="t-step-icon__number"
          >
            
            <t-icon
              name="user-filled"
            />
            
          </div>
        </div>
        <div
          class="t-step-content"
        >
          <div
            class="t-step-title"
          >
            未完成
          </div>
          <div
            class="t-step-description"
          >
            辅助信息文字最多两行
          </div>
          <div
            class="t-step-extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Steps > Steps mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-72d7acbc=""
>
  <h1
    class="title"
    data-v-72d7acbc=""
  >
    Steps 步骤条
  </h1>
  <p
    class="summary"
    data-v-72d7acbc=""
  >
    用于用户对某个任务的时间节点
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-72d7acbc=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      横向可操作步骤条
    </p>
    
    <div
      class="step-demo"
      data-v-72d7acbc=""
    >
      <div
        class="t-steps t-steps--horizontal t-steps--default-anchor"
        data-v-72d7acbc=""
      >
        
        <div
          class="t-step t-step--default t-step--finish"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                1
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                步骤描述
              </div>
              <div
                class="t-step-description"
              >
                
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default t-step--process"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                2
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                选中步骤
              </div>
              <div
                class="t-step-description"
              >
                
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        
      </div>
      <div
        class="t-steps t-steps--horizontal t-steps--default-anchor"
        data-v-72d7acbc=""
      >
        
        <div
          class="t-step t-step--default t-step--finish"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                1
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                步骤描述
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default t-step--process"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                2
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                选中步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="step-demo"
      data-v-72d7acbc=""
    >
      <div
        class="t-steps t-steps--horizontal t-steps--default-anchor"
        data-v-72d7acbc=""
        default-value="1"
      >
        
        <div
          class="t-step t-step--default t-step--process"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                1
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                步骤描述
              </div>
              <div
                class="t-step-description"
              >
                
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                2
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                选中步骤
              </div>
              <div
                class="t-step-description"
              >
                
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                3
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                步骤描述
              </div>
              <div
                class="t-step-description"
              >
                
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        
      </div>
      <div
        class="t-steps t-steps--horizontal t-steps--default-anchor"
        data-v-72d7acbc=""
        default-value="1"
      >
        
        <div
          class="t-step t-step--default t-step--process"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                1
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                步骤描述
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                2
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                选中步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                3
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                步骤描述
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="step-demo"
      data-v-72d7acbc=""
    >
      <div
        class="t-steps t-steps--horizontal t-steps--default-anchor"
        data-v-72d7acbc=""
      >
        
        <div
          class="t-step t-step--default t-step--finish"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                1
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                步骤描述
              </div>
              <div
                class="t-step-description"
              >
                
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default t-step--process"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                2
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                选中步骤
              </div>
              <div
                class="t-step-description"
              >
                
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                3
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                步骤描述
              </div>
              <div
                class="t-step-description"
              >
                
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                4
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                步骤描述
              </div>
              <div
                class="t-step-description"
              >
                
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        
      </div>
      <div
        class="t-steps t-steps--horizontal t-steps--default-anchor"
        data-v-72d7acbc=""
      >
        
        
        <div
          class="t-step t-step--default t-step--finish"
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                1
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                步骤描述
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default t-step--process"
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                2
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                选中步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default"
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                3
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                未完成
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default"
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                4
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                未完成
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        
        
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-72d7acbc=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      横向带图标可操作步骤条
    </p>
    
    <div
      class="step-demo"
      data-v-72d7acbc=""
    >
      <div
        class="t-steps t-steps--horizontal t-steps--default-anchor"
        data-v-72d7acbc=""
      >
        
        <div
          class="t-step t-step--default t-step--finish"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner t-step__inner__icon"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                
                <div
                  class="step-icon"
                  data-v-72d7acbc=""
                >
                  <svg
                    class="design-iconfont"
                    data-v-72d7acbc=""
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.25,1.5 C16.8063492,1.5 20.5,5.19365081 20.5,9.75 C20.5,12.7875661 17.75,17.0375661 12.25,22.5 C6.75,17.0375661 4,12.7875661 4,9.75 C4,5.19365081 7.69365081,1.5 12.25,1.5 Z M12.5,7 C10.8431458,7 9.5,8.34314575 9.5,10 C9.5,11.6568542 10.8431458,13 12.5,13 C14.1568542,13 15.5,11.6568542 15.5,10 C15.5,8.34314575 14.1568542,7 12.5,7 Z"
                      data-v-72d7acbc=""
                      fill="#0052D9"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                步骤描述
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default t-step--process"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner t-step__inner__icon"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                
                <div
                  class="step-icon"
                  data-v-72d7acbc=""
                >
                  <svg
                    class="design-iconfont"
                    data-v-72d7acbc=""
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.25,1.5 C16.8063492,1.5 20.5,5.19365081 20.5,9.75 C20.5,12.7875661 17.75,17.0375661 12.25,22.5 C6.75,17.0375661 4,12.7875661 4,9.75 C4,5.19365081 7.69365081,1.5 12.25,1.5 Z M12.5,7 C10.8431458,7 9.5,8.34314575 9.5,10 C9.5,11.6568542 10.8431458,13 12.5,13 C14.1568542,13 15.5,11.6568542 15.5,10 C15.5,8.34314575 14.1568542,7 12.5,7 Z"
                      data-v-72d7acbc=""
                      fill="#fff"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                选中步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner t-step__inner__icon"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                
                <div
                  class="step-icon"
                  data-v-72d7acbc=""
                >
                  <svg
                    class="design-iconfont"
                    data-v-72d7acbc=""
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 Z M12.7692308,5.84615385 L11.2307692,5.84615385 L11.2307692,12.7692308 L15.9448889,16.7248468 L16.9337929,15.5463169 L12.7687692,12.0511538 L12.7692308,5.84615385 Z"
                      data-v-72d7acbc=""
                      fill="#0052D9"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                步骤描述
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-72d7acbc=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      横向只读步骤条
    </p>
    
    <div
      class="step-demo"
      data-v-72d7acbc=""
    >
      <div
        class="t-steps t-steps--horizontal t-steps--readonly t-steps--default-anchor"
        data-v-72d7acbc=""
      >
        
        <div
          class="t-step t-step--finish"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                <svg
                  class="t-icon t-icon-check"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                已完成步骤
              </div>
              <div
                class="t-step-description"
              >
                
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--process"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                2
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                当前步骤
              </div>
              <div
                class="t-step-description"
              >
                
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                3
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                未完成步骤
              </div>
              <div
                class="t-step-description"
              >
                
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        
      </div>
      <div
        class="t-steps t-steps--horizontal t-steps--readonly t-steps--default-anchor"
        data-v-72d7acbc=""
      >
        
        <div
          class="t-step t-step--finish"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                <svg
                  class="t-icon t-icon-check"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                已完成步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--process"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                2
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                当前步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                3
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                未完成步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        
      </div>
      <div
        class="t-steps t-steps--horizontal t-steps--readonly t-steps--default-anchor"
        data-v-72d7acbc=""
      >
        
        <div
          class="t-step t-step--finish"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                <svg
                  class="t-icon t-icon-check"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                已完成步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--error"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                <svg
                  class="t-icon t-icon-close"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                错误步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                3
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                未完成步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-72d7acbc=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      竖向只读步骤条
    </p>
    
    <div
      class="step-demo"
      data-v-72d7acbc=""
    >
      <div
        class="t-steps t-steps--vertical t-steps--readonly t-steps--default-anchor"
        data-v-72d7acbc=""
      >
        
        <div
          class="t-step t-step--finish"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                <svg
                  class="t-icon t-icon-check"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                已完成步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--process"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                2
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                当前步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                3
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                未完成步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        
      </div>
      <div
        class="t-steps t-steps--vertical t-steps--readonly t-steps--default-anchor"
        data-v-72d7acbc=""
      >
        
        <div
          class="t-step t-step--finish"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                <svg
                  class="t-icon t-icon-check"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                已完成步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--error"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                <svg
                  class="t-icon t-icon-close"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                错误步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                3
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                未完成步骤
              </div>
              <div
                class="t-step-description"
              >
                辅助信息文字最多两行
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-72d7acbc=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      竖向简化只读步骤条
    </p>
    
    <div
      class="step-demo"
      data-v-72d7acbc=""
    >
      <div
        class="t-steps t-steps--vertical t-steps--dot-anchor"
        data-v-72d7acbc=""
      >
        
        <div
          class="t-step t-step--default t-step--finish"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number t-step-icon__dot"
              >
                
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                事件描述
              </div>
              <div
                class="t-step-description"
              >
                
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default t-step--process"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number t-step-icon__dot"
              >
                
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                事件描述
              </div>
              <div
                class="t-step-description"
              >
                
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--default"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number t-step-icon__dot"
              >
                
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                事件描述
              </div>
              <div
                class="t-step-description"
              >
                
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-72d7acbc=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      自定义内容步骤条
    </p>
    
    <div
      class="step-demo"
      data-v-72d7acbc=""
    >
      <div
        class="t-steps t-steps--vertical t-steps--readonly t-steps--default-anchor"
        data-v-72d7acbc=""
      >
        
        <div
          class="t-step t-step--finish"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                <svg
                  class="t-icon t-icon-check"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                已完成步骤
              </div>
              <div
                class="t-step-description"
              >
                可自定义此处内容，可自定义此处内容，可自定义此处内容可自定义此处内容可自定义此处内容。
              </div>
              <div
                class="t-step-extra"
              >
                
                <img
                  alt=""
                  data-v-72d7acbc=""
                  src="https://0729-75822.gzc.vod.tencent-cloud.com/site_doc/tdesign-logo.png"
                />
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step t-step--process"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                2
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                当前步骤
              </div>
              <div
                class="t-step-description"
              >
                可自定义此处内容，可自定义此处内容，可自定义此处内容可自定义此处内容可自定义此处内容。
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-step"
          data-v-72d7acbc=""
        >
          <div
            class="t-step__inner"
          >
            <div
              class="t-step-icon"
            >
              <div
                class="t-step-icon__number"
              >
                3
              </div>
            </div>
            <div
              class="t-step-content"
            >
              <div
                class="t-step-title"
              >
                未完成步骤
              </div>
              <div
                class="t-step-description"
              >
                可自定义此处内容，可自定义此处内容，可自定义此处内容可自定义此处内容可自定义此处内容。
              </div>
              <div
                class="t-step-extra"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Steps > Steps verticalVue demo works fine 1`] = `
<div
  class="cell-base"
  data-v-3ef23c76=""
>
  <div
    class="t-steps t-steps--vertical t-steps--default-anchor demo-steps"
    data-v-3ef23c76=""
  >
    
    <div
      class="t-step t-step--default t-step--process"
      data-v-3ef23c76=""
    >
      <div
        class="t-step__inner"
      >
        <div
          class="t-step-icon"
        >
          <div
            class="t-step-icon__number"
          >
            1
          </div>
        </div>
        <div
          class="t-step-content"
        >
          <div
            class="t-step-title"
          >
            已完成步骤
          </div>
          <div
            class="t-step-description"
          >
            辅助信息文字最多两行
          </div>
          <div
            class="t-step-extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-step t-step--default"
      data-v-3ef23c76=""
    >
      <div
        class="t-step__inner"
      >
        <div
          class="t-step-icon"
        >
          <div
            class="t-step-icon__number"
          >
            2
          </div>
        </div>
        <div
          class="t-step-content"
        >
          <div
            class="t-step-title"
          >
            当前步骤
          </div>
          <div
            class="t-step-description"
          >
            辅助信息文字最多两行
          </div>
          <div
            class="t-step-extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-step t-step--default"
      data-v-3ef23c76=""
    >
      <div
        class="t-step__inner"
      >
        <div
          class="t-step-icon"
        >
          <div
            class="t-step-icon__number"
          >
            3
          </div>
        </div>
        <div
          class="t-step-content"
        >
          <div
            class="t-step-title"
          >
            未完成步骤
          </div>
          <div
            class="t-step-description"
          >
            辅助信息文字最多两行
          </div>
          <div
            class="t-step-extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;
